tests/js_error/stack_trace/dynamic_import_module.exp
Error: test
  ┌ tests/js_error/stack_trace/script_top_level_error.js:2:9
  |
2 |   throw new Error('test')
  |         ^
Stack trace:
  at bar (tests/js_error/stack_trace/script_top_level_error.js:2:9)
  at <module> (tests/js_error/stack_trace/script_top_level_error.js:5:1)
  at <anonymous> (<native>)